[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL-SolClout Command-line Utility"
edition = "2018"
license = "Apache-2.0"
name = "spl-solclout-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[dependencies]
clap = "2.33.3"
console = "0.14.0"
serde_json = "1.0.62"
solana-account-decoder = "=1.6.6"
solana-clap-utils = "=1.6.6"
solana-cli-config = "=1.6.6"
solana-cli-output = "=1.6.6"
solana-client = "=1.6.6"
solana-logger = "=1.6.6"
solana-remote-wallet = "=1.6.6"
solana-sdk = "=1.6.6"
spl-solclout = { version = "0.0.1", path="../program", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1.0", path="../../token/program", features = [ "no-entrypoint" ] }
spl-token-swap = { version = "2.1.0", path="../../token-swap/program", features = [ "no-entrypoint" ] }


[[bin]]
name = "spl-solclout"
path = "src/main.rs"
